fixed div spacing for footer - updated for all. moved margin-bottom from info-object down to footer margin-top.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -32,7 +32,7 @@ header {
 }
 
 header img {
-  margin: .66rem .5rem;
+  margin: 0.66rem 0.5rem;
   height: 1rem;
   width: auto;
 }
@@ -60,7 +60,7 @@ header img {
 
 .callout h1 {
   font-size: 2rem;
-  margin-top: .25rem;
+  margin-top: 0.25rem;
 }
 
 /* navigation section settings */
@@ -78,7 +78,7 @@ nav {
 }
 
 nav span {
-  padding: .75rem 0;
+  padding: 0.75rem 0;
 }
 
 /* product grid settings */
@@ -118,7 +118,7 @@ image-img:
 .product span {
   display: block;
   background-color: black;
-  padding: .5rem;
+  padding: 0.5rem;
   text-align: center;
 }
 
@@ -136,12 +136,13 @@ image-img:
 }
 
 .info p {
-  margin-bottom: 4rem;
   color: black;
+  margin-bottom: 0.5rem; /* the margin will collapse if this object is just above the footer */
   display: block;
 }
 
 footer {
+  margin-top: 4rem;
   background-color: black;
   height: 5rem;
 
@@ -215,5 +216,9 @@ footer {
   /* info grid */
   .grid .info {
     width: 90%;
+  }
+
+  footer div {
+    text-align: center;
   }
 }
